# ed_installations_dumper_rust

./: .gitignore  Cargo.toml  README.md  files.json
.github/workflows/: rust.yml
src/: downloader.rs  helpers.rs  importer.rs  main.rs
